style: changed right drawer to fixed pos to allow for overflow on top of content, remove set height from main container

--- a/styles/index.css
+++ b/styles/index.css
@@ -202,7 +202,7 @@ body {
 
 /* TODO: add lg:px-32 once left/rigth drawers are removed */
 .main-container {
-  height: calc(calc(100vh - var(--topbar-height)) - 38px);
+  /* height: calc(calc(100vh - var(--topbar-height)) - 38px); */
   @apply px-4 sm:px-10 md:px-24;
 }
 
